# credits

./: Cargo.toml  README.md
src/: main.rs
src/credits/: buffer.rs  command.rs  editor.rs  keyboard.rs  keymap.rs  lib.rs  overlay.rs  view.rs
src/credits/modes/: emacs.rs  insert.rs  mod.rs  normal.rs  standard.rs
src/iota/: editor.rs  keyboard.rs  overlay.rs  view.rs
src/iota/modes/: mod.rs  normal.rs  standard.rs
