[project]
name = "credits"
version = "0.1.0"
description = "A simple text editor for cross-platform edits."
license = "MIT"
repository = "https://github.com/asmoaesl/credits"
keywords = ["editor", "text", "terminal"]
readme = "README.md"
authors = ["Luke I. Wilson <asmoaesl@gmail.com>", "Greg Chapple <gregchapple1@gmail.com>"]
edition = "2018"

[patch.crates-io]
crossterm_input = { path = "crossterm_input" } # temporary, until #157 gets pulled for crossterm

[dependencies]
crossterm = "0.9.6"
structopt = "0.2.16"
rustc-serialize = "0.3.14"
gapbuffer = "0.1.1"
tempdir = "0.3.0"
unicode-width = "0.1.1"
libc = "0.1"
clippy = { version = "*", optional = true }
regex = "0.1"
lazy_static = "0.2"

[lib]
name = "credits"
path = "src/credits/lib.rs"

[[bin]]
path = "src/main.rs"
name = "credits"
doc = false
